# asynciolimiter

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.rst  aioratelimiter.py  asynciolimiter.py  changelog.md  cliff.toml  module.py  pyproject.toml  setup.cfg  tests.py
.github/: FUNDING.yml
.github/workflows/: release.yml  test.yml
asynciolimiter/: __init__.py
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/charts/: LeakyBucketLimiterChart.drawio  LimiterChart.drawio  StrictLimiterChart.drawio
scripts/: build.bat  run_open_coverage.bat  run_tests.bat  upload_real.bat  upload_test.bat
tests/: test_limiter.py  test_limiter_effective_wait.py
