[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asynciolimiter"
dynamic = ["version"]
description = "Rate limiter for Async IO"
readme = "README.md"
authors = [
    { name = "Bar Harel", email = "bzvi7919@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",

    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",

    "Framework :: AsyncIO",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    
    "Topic :: Internet",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries",
    
    "Typing :: Typed"
]
keywords = ["rate limiter", "asyncio", "throttling"]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/bharel/asynciolimiter"
Documentation = "https://asynciolimiter.readthedocs.io/en/latest/"
Source = "https://github.com/bharel/asynciolimiter"
Changelog = "https://github.com/bharel/asynciolimiter/blob/master/changelog.md"

[project.optional-dependencies]
dev = [
    "flake8",
    "isort",
    "mypy",
    "git-cliff",
    "sphinx",
    "sphinx-rtd-theme"
]

[tool.hatch.build.targets.sdist]
packages = ["asynciolimiter"]

[tool.hatch.build.targets.wheel]
packages = ["asynciolimiter"]

[tool.hatch.version]
path = "asynciolimiter/__init__.py"

[tool.ruff]
exclude = ["docs"]
line-length = 79

[tool.ruff.lint]
ignore = ["PT", "S101"]

[tool.hatch.envs.dev]
features = ["dev"]

[tool.mypy]
exclude = ["tests", "docs"]
