[metadata]
name = aioratelimiter
version = 1.0.0a3
description = Rate limiter for Async IO
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3

[options]
py_modules =
    aioratelimiter
python_requires = >=3.7

[options.extras_require]
build =
    wheel
    twine
    sphinx