[metadata]
name = asynciolimiter
version = 1.0.0a4
description = Rate limiter for Async IO
long_description = file: README.md
long_description_content_type = text/markdown
author = Bar Harel
author_email = bzvi7919@gmail.com
license = MIT
project_urls =
    Documentation = https://asynciolimiter.readthedocs.io/en/latest/
    Source = https://github.com/bharel/asynciolimiter
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3

[options]
py_modules =
    asynciolimiter
python_requires = >=3.7

[options.extras_require]
build =
    wheel
    twine
    sphinx