[metadata]
name = asynciolimiter
version = 1.0.0
description = Rate limiter for Async IO
long_description = file: README.md
long_description_content_type = text/markdown
author = Bar Harel
author_email = bzvi7919@gmail.com
license = MIT
project_urls =
    Documentation = https://asynciolimiter.readthedocs.io/en/latest/
    Source = https://github.com/bharel/asynciolimiter
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
py_modules =
    asynciolimiter
python_requires = >=3.8

[options.extras_require]
build =
    wheel
    twine
    sphinx